# ModelKit-study

./: .gitmodules  CMakeLists.txt  ModelKit.pro  ModelKit.sln  README.md  dfff
include/: boundary.h  layer.h  math.hpp  point.h  polygon.h  slcmodel.h
src/: ModelKit.vcxproj  ModelKit.vcxproj.filters  boundary.cpp  layer.cpp  point.cpp  polygon.cpp  slcmodel.cpp  src.pro
src/Win32/Debug/ModelKit.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  ModelKit.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog
tests/: tests.pro  tests.sln
tests/testInfill/: draw.cpp  draw.h  infillplotwidget.cpp  infillplotwidget.h  testInfill.pro  testInfill.vcxproj  testInfill.vcxproj.filters  testinfill.cpp  window.cpp  window.h
tests/testInfill/Debug/: moc_draw.cpp  moc_infillplotwidget.cpp  moc_window.cpp
tests/testInfill/Win32/Debug/testInfill.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/testModelKit/: CMakeLists.txt  testModelKit.pro  testModelKit.vcxproj  testModelKit.vcxproj.filters  testmodelkit.cpp
tests/testModelKit/Win32/Debug/testModelKit.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/testOffset/: testOffset.pro  testOffset.vcxproj  testOffset.vcxproj.filters  testoffset.cpp
tests/testSLC/: testSLC.pro  testSLC.vcxproj  testSLC.vcxproj.filters  testslc.cpp
(+12 files in other folders)
